// ========================================
// 쯔양 맛집 지도 - 데이터베이스 스키마 (v3.4)
// dbdiagram.io 형식
// 작성일: 2025년 11월 7일 (최종 수정: 2025년 12월 11일)
// 버전: 3.4 - 리뷰 OCR 중복 검사 시스템 추가
// 
// 주요 변경사항 (v3.3):
// - RLS 정책 성능 최적화: auth.uid() → (SELECT auth.uid())
// - Materialized View 보안 강화: 직접 접근 차단, 함수 래퍼로 접근
// - Extension 스키마 분리: extensions 스키마로 이동 (pg_trgm, uuid-ossp, btree_gin)
// - 모니터링 뷰 제거: v_table_sizes, v_index_usage → 함수로 변경
// - 중복 인덱스 제거: idx_restaurants_category_gin 제거
// 
// 주요 변경사항 (v3.2):
// - restaurants 테이블에 source_type 컬럼 추가
// - source_type: 데이터 출처 추적 (perplexity, manual, user_submission 등)
// - insert_restaurant_from_jsonl() 함수 업데이트 (source_type 자동 매핑)
//
// 주요 변경사항 (v3.1):
// - JSONL 크롤링 데이터 삽입 헬퍼 함수 추가
// - insert_restaurant_from_jsonl(): 단일 레코드 UPSERT
// - batch_insert_restaurants_from_jsonl(): 배치 삽입
// - camelCase → snake_case 자동 변환 지원
// 
// 주요 변경사항 (v3.0):
// - restaurants와 evaluation_records 테이블 통합
// - 승인 시스템 추가 (status: pending, approved, rejected)
// - RLS 정책: 일반 사용자는 승인된 맛집만 조회
// - 관리자 전용 승인/거부 함수 추가
// ========================================

// ========================================
// ENUM 타입 정의
// ========================================

Enum app_role {
  admin
  user
}

Enum notification_type {
  system
  user
  admin_announcement
  new_restaurant
  ranking_update
  review_approved
  review_rejected
  submission_approved
  submission_rejected
}

// ========================================
// 테이블 정의
// ========================================

Table user_roles {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > auth_users.id, note: 'auth.users 테이블의 사용자 ID']
  role app_role [not null, default: 'user', note: '사용자 역할 (admin: 관리자, user: 일반 사용자)']
  created_at timestamptz [default: `now()`]
  
  indexes {
    (user_id, role) [unique]
  }
  
  Note: '사용자 역할 관리 테이블 (admin, user)'
}

Table profiles {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, unique, ref: > auth_users.id]
  nickname text [not null, unique, note: '사용자 닉네임 (고유값, 2-20자, 중복 불가)']
  email text [not null, note: '이메일 주소 (형식 검증, 중복 가능 - 회원탈퇴 후 재가입 허용)']
  profile_picture text [note: '프로필 이미지 URL']
  created_at timestamptz [not null, default: `now()`]
  last_login timestamptz [not null, default: `now()`, note: '마지막 로그인 시간']
  
  indexes {
    user_id
    nickname [note: 'UNIQUE - 중복 불가']
    email [note: '중복 가능 - 회원탈퇴 후 재가입 허용']
    created_at [name: 'idx_profiles_created_at', type: btree]
  }
  
  Note: '사용자 프로필 정보 테이블 (이메일 중복 가능, 닉네임만 고유)'
}

Table restaurants {
  id uuid [pk, default: `gen_random_uuid()`]
  
  // 기본 정보
  name text [not null, note: '맛집 이름 (2-100자)']
  phone text [note: '전화번호 (형식: 02-1234-5678 또는 010-1234-5678)']
  description text
  categories text[] [note: '맛집 카테고리 배열 (1-5개, status=approved일 때 필수)']
  
  // 위치 정보
  lat numeric [note: '위도 (범위: -90 ~ 90, status=approved일 때 필수)']
  lng numeric [note: '경도 (범위: -180 ~ 180, status=approved일 때 필수)']
  
  // 주소 정보
  road_address text [note: '도로명 주소']
  jibun_address text [note: '지번 주소']
  english_address text [note: '영문 주소']
  address_elements jsonb [default: '{}', note: '주소 상세 정보 (JSONB)']
  origin_address jsonb [note: 'AI 크롤링 원본 주소 정보 (JSON: {address, lat, lng})']
  
  // 유튜브 관련 정보
  youtube_link text [note: '유튜브 영상 링크 (단일)']
  youtube_meta jsonb [note: '유튜브 메타데이터 (title, published_at, duration, is_shorts, is_ads, what_ads)']
  unique_id text [unique, note: 'AI 크롤링 고유 식별자 (youtube_link 기반)']
  
  // 쯔양 리뷰 정보
  tzuyang_review text [note: '쯔양 리뷰 내용 (텍스트)']
  reasoning_basis text [note: 'AI 평가 근거']
  
  // AI 평가 정보
  evaluation_results jsonb [note: 'AI 평가 결과 (JSON)']
  
  // 데이터 출처
  source_type text [note: '데이터 출처 (perplexity, geminiCLI, admin, user_submission)']
  
  // 지오코딩 정보
  geocoding_success boolean [not null, default: false, note: '지오코딩 성공 여부']
  geocoding_false_stage integer [note: '지오코딩 실패 단계 (0: 초기, 1: 중간, 2: 최종)']
  
  // 상태 관리
  status text [not null, default: 'pending', note: '승인 상태 (pending: 대기, approved: 승인, rejected: 거부)']
  is_missing boolean [not null, default: false, note: '맛집 정보 누락 여부']
  is_not_selected boolean [not null, default: false, note: '선택되지 않음 여부']
  
  // 리뷰 통계
  review_count integer [not null, default: 0, note: '리뷰 개수 (0 이상)']
  
  // 관리자 정보
  admin_notes text [note: '관리자 메모']
  created_by uuid [ref: > auth_users.id]
  updated_by_admin_id uuid [ref: > auth_users.id]
  
  // 타임스탬프
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  
  indexes {
    name
    (lat, lng) [name: 'idx_restaurants_lat_lng']
    categories [type: gin]
    created_at [name: 'idx_restaurants_created_at', type: btree]
    review_count [name: 'idx_restaurants_review_count', type: btree]
    
    // 상태 관리 인덱스
    status [name: 'idx_restaurants_status']
    unique_id [name: 'idx_restaurants_unique_id']
    geocoding_success [name: 'idx_restaurants_geocoding_success']
    geocoding_false_stage [name: 'idx_restaurants_geocoding_false_stage', note: 'Partial Index: WHERE geocoding_success = false']
    
    // 부분 인덱스 (승인된 맛집 - 일반 사용자용)
    (created_at, review_count) [name: 'idx_restaurants_approved', note: "Partial Index: WHERE status = 'approved'"]
    (review_count, created_at) [name: 'idx_restaurants_approved_with_reviews', note: "Partial Index: WHERE status = 'approved' AND review_count > 0"]
    
    // 부분 인덱스 (관리자용)
    created_at [name: 'idx_restaurants_pending', note: "Partial Index: WHERE status = 'pending'"]
    created_at [name: 'idx_restaurants_rejected', note: "Partial Index: WHERE status = 'rejected'"]
    created_at [name: 'idx_restaurants_missing', note: 'Partial Index: WHERE is_missing = true']
    created_at [name: 'idx_restaurants_not_selected', note: 'Partial Index: WHERE is_not_selected = true']
    
    // JSONB 인덱스
    address_elements [type: gin]
    youtube_meta [type: gin, name: 'idx_restaurants_youtube_meta']
    evaluation_results [type: gin, name: 'idx_restaurants_evaluation_results']
    origin_address [type: gin, name: 'idx_restaurants_origin_address']
    
    // 복합 인덱스
    (lat, lng, review_count) [name: 'idx_restaurants_location_review_count']
    (status, created_at) [name: 'idx_restaurants_status_created']
    
    // 전문 검색 인덱스 (pg_trgm)
    name [name: 'idx_restaurants_name_trgm', type: gin, note: '유사도 검색 (pg_trgm)']
    road_address [name: 'idx_restaurants_road_address_trgm', type: gin, note: '유사도 검색 (pg_trgm)']
    jibun_address [name: 'idx_restaurants_jibun_address_trgm', type: gin, note: '유사도 검색 (pg_trgm)']
  }
  
  Note: '맛집 정보 통합 테이블 (restaurants + evaluation_records)'
}

Table reviews {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > auth_users.id]
  restaurant_id uuid [not null, ref: > restaurants.id]
  title text [not null, note: '리뷰 제목 (2-200자)']
  content text [not null, note: '리뷰 내용 (최소 10자)']
  visited_at timestamptz [not null, note: '방문 일시 (미래 날짜 불가)']
  verification_photo text [not null, note: '방문 인증 사진 URL']
  food_photos text[] [default: '{}', note: '음식 사진 URL 배열']
  categories text[] [default: '{}', note: '리뷰 카테고리 배열']
  is_verified boolean [not null, default: false, note: '관리자 인증 여부']
  admin_note text [note: '관리자 메모']
  is_pinned boolean [not null, default: false, note: '고정 여부']
  is_edited_by_admin boolean [not null, default: false, note: '관리자 수정 여부']
  edited_by_admin_id uuid [ref: > auth_users.id, note: '수정한 관리자 ID']
  edited_at timestamptz [note: '관리자 수정 시간']
  
  // OCR 중복 검사 (v3.4 추가)
  status text [not null, default: 'pending', note: '리뷰 상태 (pending, approved, rejected)']
  receipt_hash text [note: 'SHA-256 영수증 해시 (store_name|date|time|amount)']
  receipt_data jsonb [note: 'OCR 추출 데이터: {store_name, date, time, total_amount, items, confidence}']
  is_duplicate boolean [not null, default: false, note: '중복 영수증 여부']
  ocr_processed_at timestamptz [note: 'OCR 처리 완료 시각 (NULL=미처리)']
  
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  
  indexes {
    restaurant_id
    user_id
    created_at [name: 'idx_reviews_created_at', type: btree]
    (restaurant_id, created_at) [name: 'idx_reviews_verified', note: 'Partial Index: WHERE is_verified = true']
    (restaurant_id, created_at) [name: 'idx_reviews_pinned', note: 'Partial Index: WHERE is_pinned = true']
    (edited_by_admin_id, edited_at) [name: 'idx_reviews_admin_edited', note: 'Partial Index: WHERE is_edited_by_admin = true']
    (restaurant_id, created_at) [name: 'idx_reviews_restaurant_created']
    (user_id, created_at) [name: 'idx_reviews_user_created']
    categories [type: gin]
    
    // OCR 관련 인덱스 (v3.4 추가)
    receipt_hash [unique, name: 'idx_reviews_receipt_hash', note: 'Partial Index: WHERE receipt_hash IS NOT NULL']
    status [name: 'idx_reviews_status']
    (created_at) [name: 'idx_reviews_ocr_pending', note: 'Partial Index: WHERE ocr_processed_at IS NULL']
    (created_at) [name: 'idx_reviews_duplicate', note: 'Partial Index: WHERE is_duplicate = true']
  }
  
  Note: '사용자 리뷰 테이블'
}

Table review_likes {
  id uuid [pk, default: `gen_random_uuid()`]
  review_id uuid [not null, ref: > reviews.id, note: '좋아요한 리뷰 ID']
  user_id uuid [not null, ref: > auth_users.id, note: '좋아요한 사용자 ID']
  created_at timestamptz [default: `now()`]
  
  indexes {
    (review_id, user_id) [unique]
    review_id
    user_id
  }
  
  Note: '리뷰 좋아요 테이블'
}

Table server_costs {
  id uuid [pk, default: `gen_random_uuid()`]
  item_name text [not null, note: '비용 항목명 (최소 2자)']
  monthly_cost numeric [not null, note: '월 비용 (0 이상)']
  description text [note: '비용 설명']
  updated_by uuid [ref: > auth_users.id]
  updated_at timestamptz [not null, default: `now()`]
  
  Note: '서버 운영 비용 테이블'
}

Table user_stats {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, unique, ref: > auth_users.id]
  review_count integer [not null, default: 0, note: '총 리뷰 작성 수 (0 이상)']
  verified_review_count integer [not null, default: 0, note: '인증된 리뷰 수 (0 이상, review_count 이하)']
  trust_score numeric [not null, default: 0, note: '신뢰도 점수 (0-100)']
  last_updated timestamptz [not null, default: `now()`]
  
  indexes {
    trust_score [name: 'idx_user_stats_trust_score', type: btree]
    review_count [name: 'idx_user_stats_review_count', type: btree]
    verified_review_count [name: 'idx_user_stats_verified_count', type: btree]
    (trust_score, verified_review_count, review_count) [name: 'idx_user_stats_leaderboard', type: btree]
  }
  
  Note: '사용자 활동 통계 테이블'
}

Table notifications {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > auth_users.id]
  type notification_type [not null, default: 'system', note: '알림 타입 (system, user, admin_announcement 등)']
  title text [not null, note: '알림 제목 (1-100자)']
  message text [not null, note: '알림 내용 (1-500자)']
  is_read boolean [not null, default: false, note: '읽음 여부']
  data jsonb [default: '{}', note: '추가 데이터 (JSONB)']
  created_at timestamptz [not null, default: `now()`]
  
  indexes {
    user_id
    created_at [name: 'idx_notifications_created_at', type: btree]
    type
    (user_id, created_at) [name: 'idx_notifications_user_created']
    (user_id, type) [name: 'idx_notifications_user_type']
    (user_id, created_at) [name: 'idx_notifications_unread', note: 'Partial Index: WHERE is_read = false']
    data [type: gin]
  }
  
  Note: '사용자 알림 테이블'
}

Table announcements {
  id uuid [pk, default: `gen_random_uuid()`]
  admin_id uuid [ref: > auth_users.id, note: '공지 작성 관리자 ID']
  title text [not null, note: '공지 제목 (1-100자)']
  message text [not null, note: '공지 내용 (1자 이상)']
  data jsonb [default: '{}', note: '추가 데이터 (JSONB)']
  is_active boolean [not null, default: true, note: '공지 활성화 여부']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  
  Note: '관리자 공지사항 테이블'
}

// ⚠️ evaluation_records 테이블은 restaurants 테이블과 통합되었습니다.
// 모든 평가 기록은 restaurants 테이블에서 status 필드로 관리됩니다.
// - status = 'pending': 승인 대기 중
// - status = 'approved': 승인됨 (일반 사용자에게 조회 가능)
// - status = 'rejected': 거부됨

// ========================================
// Materialized Views (함수를 통해서만 접근 가능)
// ========================================

Table mv_restaurant_stats {
  id uuid [pk]
  name text
  categories text[]
  lat numeric
  lng numeric
  road_address text
  status text [note: '승인 상태 (approved만 포함)']
  review_count integer
  actual_review_count bigint
  verified_review_count bigint
  unique_reviewers bigint
  last_review_at timestamptz
  all_review_categories text[]
  
  indexes {
    id [unique, name: 'idx_mv_restaurant_stats_id']
    actual_review_count [name: 'idx_mv_restaurant_stats_review_count', type: btree]
    verified_review_count [name: 'idx_mv_restaurant_stats_verified', type: btree]
    (lat, lng) [name: 'idx_mv_restaurant_stats_location']
  }
  
  Note: '승인된 맛집 통계 Materialized View (status=approved만 포함, get_restaurant_stats() 함수로 접근)'
}

Table mv_user_leaderboard {
  user_id uuid [pk]
  nickname text
  profile_picture text
  review_count integer
  verified_review_count integer
  trust_score numeric
  total_likes_received bigint
  rank bigint
  
  indexes {
    user_id [unique, name: 'idx_mv_user_leaderboard_user_id']
    rank [name: 'idx_mv_user_leaderboard_rank']
    trust_score [name: 'idx_mv_user_leaderboard_trust_score', type: btree]
  }
  
  Note: '사용자 리더보드 Materialized View (get_user_leaderboard() 함수로 접근)'
}

Table mv_popular_reviews {
  id uuid [pk]
  restaurant_id uuid
  user_id uuid
  title text
  content text
  visited_at timestamptz
  verification_photo text
  food_photos text[]
  is_verified boolean
  is_pinned boolean
  created_at timestamptz
  like_count bigint
  user_nickname text
  user_profile_picture text
  restaurant_name text
  restaurant_address text
  
  indexes {
    id [unique, name: 'idx_mv_popular_reviews_id']
    like_count [name: 'idx_mv_popular_reviews_like_count', type: btree]
    (restaurant_id, like_count) [name: 'idx_mv_popular_reviews_restaurant']
    created_at [name: 'idx_mv_popular_reviews_created_at', type: btree]
  }
  
  Note: '인기 리뷰 Materialized View (get_popular_reviews() 함수로 접근)'
}

// ========================================
// 참조용 auth.users 테이블 (Supabase 내장)
// ========================================

Table auth_users {
  id uuid [pk, note: 'Supabase Auth 사용자 ID']
  email text [note: '사용자 이메일']
  created_at timestamptz
  
  Note: 'Supabase Authentication 내장 테이블 (참조용)'
}

// ========================================
// 관계 정의 요약
// ========================================

// user_roles -> auth.users
// profiles -> auth.users
// restaurants -> auth.users (created_by, updated_by_admin_id)
// reviews -> auth.users (user_id, edited_by_admin_id)
// reviews -> restaurants
// review_likes -> reviews
// review_likes -> auth.users
// server_costs -> auth.users (updated_by)
// user_stats -> auth.users
// notifications -> auth.users
// announcements -> auth.users (admin_id)

// ========================================
// 주요 함수 목록
// ========================================

/*
📊 통계 및 조회 함수:
- get_restaurant_stats_by_status(): 상태별 맛집 통계 (approved, pending, rejected)
- get_approved_restaurants(limit, offset): 승인된 맛집 목록 조회 (페이징)
- search_restaurants(query, category, max_results, similarity_threshold): 맛집 검색 (이름, 주소 유사도)

🔐 관리자 함수:
- approve_restaurant(restaurant_id, admin_user_id): 맛집 승인 처리
- reject_restaurant(restaurant_id, admin_user_id, reject_reason): 맛집 거부 처리

📥 JSONL 데이터 삽입 함수:
- insert_restaurant_from_jsonl(jsonl_data): 단일 JSONL 레코드 삽입/업데이트
  * unique_id 기준 UPSERT
  * source_type 자동 매핑 (기본값: 'perplexity')
  * camelCase → snake_case 자동 변환 (is_notSelected → is_not_selected)
  * youtube_links 배열 자동 관리
  * category 단일값 → 배열 자동 변환
  * tzuyang_review → tzuyang_reviews JSONB 배열로 변환
  
- batch_insert_restaurants_from_jsonl(jsonl_array): 배치 삽입
  * 여러 JSONL 레코드 한 번에 처리
  * 삽입/업데이트/실패 통계 반환
  * 실패한 레코드 자동 수집
  * 트랜잭션 안전성 보장

🔄 Materialized View 관리:
- refresh_materialized_views(): 모든 Materialized View 갱신
- refresh_restaurant_stats(): 맛집 통계 View 갱신
- refresh_user_leaderboard(): 리더보드 View 갱신
- refresh_popular_reviews(): 인기 리뷰 View 갱신

� Materialized View 접근 함수 (보안 강화):
- get_restaurant_stats(): 맛집 통계 조회 (mv_restaurant_stats 래퍼)
- get_user_leaderboard(): 사용자 리더보드 조회 (mv_user_leaderboard 래퍼)
- get_popular_reviews(): 인기 리뷰 조회 (mv_popular_reviews 래퍼)
⚠️ Materialized View에 직접 접근 불가, 함수를 통해서만 접근 가능

🔧 모니터링 함수:
- get_table_sizes(): 테이블 및 인덱스 크기 조회
- get_index_usage(): 인덱스 사용 통계 조회

�👤 사용자 통계:
- update_user_stats_on_review(): 리뷰 작성/인증/삭제 시 통계 업데이트
- calculate_user_trust_score(user_id): 신뢰도 점수 계산

🔔 알림:
- create_user_notification(): 사용자 알림 생성
- create_admin_announcement_notification(): 관리자 공지 알림
- create_new_restaurant_notification(): 신규 맛집 알림
- create_ranking_notification(): 랭킹 업데이트 알림

🧹 유지보수:
- cleanup_old_notifications(days): 오래된 알림 정리
- cleanup_old_announcements(days): 오래된 공지 정리

🔒 성능 최적화 (v3.3):
- 모든 RLS 정책: auth.uid() → (SELECT auth.uid()) 변환
- Extension 분리: public → extensions 스키마로 이동
- 중복 인덱스 제거: idx_restaurants_category_gin 삭제
*/

// ========================================
// JSONL 필드 매핑 (camelCase → snake_case)
// ========================================

/*
자동 변환되는 필드:
- source_type → source_type ✅ (기본값: 'perplexity')
- is_notSelected → is_not_selected ✅
- roadAddress → road_address ✅
- jibunAddress → jibun_address ✅
- englishAddress → english_address ✅
- addressElements → address_elements ✅
- category (string) → category (text[]) ✅
- tzuyang_review (text) → tzuyang_reviews (jsonb) ✅

JSONL 데이터 구조 예시:
{
  "youtube_link": "https://www.youtube.com/watch?v=...",
  "status": "pending",
  "youtube_meta": {
    "title": "할머니가 끓여주시는 울트라라면...",
    "publishedAt": "2025-09-02T12:30:02Z",
    "is_shorts": false,
    "duration": 941,
    "ads_info": {"is_ads": false, "what_ads": null}
  },
  "name": "대성식품",
  "phone": "063-284-1486",
  "category": "분식",
  "reasoning_basis": "영상은 전주시에 위치한...",
  "tzuyang_review": "쯔양은 이곳의 음식들이...",
  "origin_address": {
    "address": "전북 전주시 완산구 팔달로 157-5",
    "lat": 35.8162906,
    "lng": 127.1471678
  },
  "roadAddress": "전북특별자치도 전주시 완산구 팔달로 157-5",
  "jibunAddress": "전북특별자치도 전주시 완산구 경원동1가 104-26",
  "englishAddress": "157-5, Paldal-ro, Wansan-gu, Jeonju-si",
  "addressElements": [...],
  "geocoding_success": true,
  "geocoding_false_stage": null,
  "is_missing": false,
  "is_notSelected": false,
  "evaluation_results": {
    "category_validity_TF": {"eval_value": true},
    "visit_authenticity": {"eval_value": 1, "eval_basis": "..."},
    "rb_inference_score": {"eval_value": 2, "eval_basis": "..."},
    "rb_grounding_TF": {"eval_value": true, "eval_basis": "..."},
    "review_faithfulness_score": {"eval_value": 1, "eval_basis": "..."},
    "category_TF": {"eval_value": true, "category_revision": null, "eval_basis": "..."}
  },
  "unique_id": "4ed18d7db97160cecaf8ec7d848d2393..."
}

사용 예시 (Python):
from supabase import create_client
import json

supabase = create_client(SUPABASE_URL, SUPABASE_KEY)

# JSONL 파일 읽기
records = []
with open('tzuyang_restaurants.jsonl', 'r', encoding='utf-8') as f:
    for line in f:
        records.append(json.loads(line))

# 배치 삽입
result = supabase.rpc('batch_insert_restaurants_from_jsonl', {
    'jsonl_array': records[:100]  # 100개씩
}).execute()

stats = result.data[0]
print(f"신규: {stats['inserted_count']}")
print(f"업데이트: {stats['updated_count']}")
print(f"실패: {stats['failed_count']}")

# Materialized View 조회 (함수를 통해서만 접근)
restaurant_stats = supabase.rpc('get_restaurant_stats').execute()
user_leaderboard = supabase.rpc('get_user_leaderboard').execute()
popular_reviews = supabase.rpc('get_popular_reviews').execute()

# 모니터링
table_sizes = supabase.rpc('get_table_sizes').execute()
index_usage = supabase.rpc('get_index_usage').execute()
*/
